app/main/default/objects/OAH_Filing_Party_Info__c/fields/Date_of_Filing__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_of_Filing__c</fullName>
        <description>Date filed by Party</description>
        <label>Date of Filing</label>
        <required>true</required>
        <type>Date</type>
    </fields>
</CustomObject>