app/main/default/objects/OAH_Filing_Party_Info__c/fields/Filing_Date_Text__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Filing_Date_Text__c</fullName>
        <description>This field concatenates the text &quot;Filing Date&quot; with the Date of Filing field to display as one field.  This is used by the OAH Filing Party Info related list on the OAH Docket Sheet  Docket Sheet Layout.</description>
        <formula>&quot;Filing Date &quot; &amp; TEXT( MONTH( Date_of_Filing__c ) ) &amp; &quot;/&quot; &amp; TEXT( DAY( Date_of_Filing__c ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR( Date_of_Filing__c ) )</formula>
        <label>Filing Date</label>
        <type>Text</type>
    </fields>
</CustomObject>