app/main/default/objects/OAH_Filing_Party_Info__c/fields/Filing_Party_Text2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Filing_Party_Text2__c</fullName>
        <formula>Party_Description__c &amp; &quot; &quot; &amp; Party_Name__r.FirstName &amp; &quot; &quot; &amp; Party_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing Party</label>
        <type>Text</type>
    </fields>
</CustomObject>