app/main/default/objects/OAH_Filing_Party_Info__c/fields/Filing_Party_Text__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Filing_Party_Text__c</fullName>
        <description>This field concatenates the Party Description field with the OAH Party Name field to display as one field.  This is used by the OAH Filing Party Info related list on the OAH Docket Sheet  Docket Sheet Layout.</description>
        <formula>Party_Description__c &amp; &quot; &quot; &amp;  OAH_Party_Name__r.Name</formula>
        <label>Filing Party</label>
        <type>Text</type>
    </fields>
</CustomObject>