app/main/default/objects/OAH_Filing_Party_Info__c/fields/OAH_Party_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Party_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Party Name</label>
        <referenceTo>OAH_Contact__c</referenceTo>
        <relationshipLabel>OAH Filing Party Info</relationshipLabel>
        <relationshipName>OAH_Parties_Info</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
</CustomObject>