app/main/default/objects/OAH_Filing_Party_Info__c/fields/Party__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Party__c</fullName>
        <description>Which party of the case the received date is related to.</description>
        <label>Party</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petitioner-Attorney</fullName>
                </value>
                <value>
                    <fullName>Petitioner-Pro Se</fullName>
                </value>
                <value>
                    <fullName>Respondent-Attorney</fullName>
                </value>
                <value>
                    <fullName>Respondent-Pro Se</fullName>
                </value>
                <value>
                    <fullName>Intervenor-Attorney</fullName>
                </value>
                <value>
                    <fullName>Intervenor-Pro Se</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>DCCA</fullName>
                </value>
                <value>
                    <fullName>OAH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>