app/main/default/objects/OAH_Filing_Party_Info__c/fields/Party_Description__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Party_Description__c</fullName>
        <formula>TEXT( Party__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Description</label>
        <type>Text</type>
    </fields>
</CustomObject>