app/main/default/objects/OAH_Filing_Party_Info__c/fields/Party_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Filing Party Info</relationshipLabel>
        <relationshipName>OAH_Filing_Party_Info</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>