app/main/default/objects/OAH_Filing_Party_Info__c/fields/Party_Record_ID_text__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Party_Record_ID_text__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Record ID text</label>
        <type>Text</type>
    </fields>
</CustomObject>