app/main/default/objects/OAH_Filing_Party_Info__c/fields/Party_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Party_Type__c</fullName>
        <description>Which type of party of the case the received date is related to.</description>
        <label>Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Pro Se</fullName>
                </value>
                <value>
                    <fullName>Intervenor</fullName>
                    <isActive>false</isActive>
                    <label>Intervenor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>