app/main/default/objects/OAH_Filing_Party_Info__c/listViews/All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>Party__c</columns>
        <columns>Date_of_Filing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>